Revert "name changed"
This reverts commit 72915326cc12db7f69fc46d1d357374ad2593dc6.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tweet-cards",
+  "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ViktorZvonar.github.io/tweet-cards/",
