--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "tweed-cards",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ViktorZvonar.github.io/tweet-cards/",
