--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "axios": "^1.4.0",
     "nanoid": "^4.0.2",
     "numeral": "^2.0.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.3"
